# graphics662-skinning

./: .gitignore  CMakeLists.txt  README.md
serve/: bbw_test.py  bbwbridge.js  index.html
serve/examples/: How to add texture coordinates to a 2D OBJ that lacks them.txt  process_OBJ.py  process_OBJ_stretch.py
src/: bbw.cpp  bbw.h  bbwbridge.cpp  util.h
tests/cotangent/: skinning_weights irregular-i2 unbounded cotangent barycentric.json  skinning_weights irregular-i2 unbounded graph.json  skinning_weights irregular-i2-stretch bounded cotangent barycentric.json  skinning_weights irregular-i2-stretch bounded graph.json  skinning_weights regular-7-stretch bounded cotangent barycentric.json  skinning_weights regular-7-stretch bounded graph.json
tests/graph laplacian/: circle1 bounded.json  circle1 unbounded.json  circle2 bounded.json  circle2 unbounded.json  woody1 bounded.json  woody1 unbounded.json  woody5 bounded.json  woody5 unbounded.json
